feat(conversion): adds conversion from file to run with validation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
         <app-template-button
             buttonText="Left button"
             buttonIcon="lightbulb"
+            (click)="uploadFile()"
         ></app-template-button>
         <mat-form-field appearance="outline" class="textarea">
             <mat-label>Source file</mat-label>
