--- a/src/app/components/template-button/template-button.component.html
+++ b/src/app/components/template-button/template-button.component.html
@@ -7,6 +7,9 @@
         (click)="processMouseClick($event)"
         (mouseenter)="hoverStart($event)"
         (mouseleave)="hoverEnd($event)"
+        (drop)="processDrop($event)"
+        (dragover)="dragStart($event)"
+        (dragleave)="dragEnd($event)"
     >
         <mat-icon class="larger-icon">
             {{ buttonIcon }}
