PAR-11: adds basic rendering for run

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a href="https://www.fernuni-hagen.de/ilovepetrinets/"
         ><h1>I <span class="red">❤</span> Petri Nets</h1></a
     >
-    <h2>Subtitle</h2>
+    <h2>Partial language</h2>
 
     <!--    Main content    -->
     <app-display class="padding full-size"></app-display>
