--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,16 @@ body {
     padding: 50px;
     font-family: "Courier New", sans-serif;
 }
+
+svg text {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+svg text{
+    text-anchor: middle;
+}
