--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,3 +56,9 @@ mat-icon.color_error {
 ::ng-deep .mat-tooltip {
     white-space: pre-line;
 }
+
+.button_resolve {
+    position: absolute;
+    right: 0px;
+    bottom: 8px;
+}
