solves some compiling issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,7 +103,7 @@
                 </button>
             </div>
             <button
-                *ngIf="isRunValid === Valid.Warn"
+                *ngIf="runValidationStatus === 'warn'"
                 class="button_resolve"
                 color="accent"
                 matSuffix
