PAR-15: refactoring to allow multiple runs - introduces correct usage of observables - extracted textarea as custom component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,109 +15,9 @@
             (buttonAction)="openFileSelector()"
             (dropAction)="dropFiles($event)"
         ></app-template-button>
-        <mat-form-field
-            appearance="outline"
-            class="textarea"
-            [matTooltip]="runHint"
-        >
-            <mat-label
-                class="source_label"
-                fxLayout="row"
-                fxLayoutAlign="space-between"
-            >
-                <span>Source file</span>
-                <ng-container [ngSwitch]="runValidationStatus">
-                    <mat-icon *ngSwitchCase="'success'" class="color_success">
-                        check_circle
-                    </mat-icon>
-                    <mat-icon *ngSwitchCase="'warn'" class="color_warning">
-                        warning_amber
-                    </mat-icon>
-                    <mat-icon *ngSwitchCase="'error'" class="color_error">
-                        error_outline
-                    </mat-icon>
-                </ng-container>
-            </mat-label>
-            <textarea
-                matInput
-                cdkTextareaAutosize
-                cdkAutosizeMinRows="10"
-                cdkAutosizeMaxRows="20"
-                [formControl]="textareaFc"
-            ></textarea>
-            <mat-divider></mat-divider>
-            <div fxLayout="row" fxLayoutAlign="space-evenly start">
-                <span class="run_info"
-                    >Run: {{ (getCurrentRunIndex$ | async)! + 1 }} /
-                    {{ getRunCount$ | async }}
-                </span>
-                <button
-                    mat-icon-button
-                    aria-label="Previous run"
-                    matTooltip="Previous run"
-                    [disabled]="(hasPreviousRun$ | async) === false"
-                    (click)="previousRun()"
-                >
-                    <mat-icon>navigate_before</mat-icon>
-                </button>
-                <button
-                    mat-icon-button
-                    aria-label="Next run"
-                    matTooltip="Next run"
-                    [disabled]="(hasNextRun$ | async) === false"
-                    (click)="nextRun()"
-                >
-                    <mat-icon>navigate_next</mat-icon>
-                </button>
-            </div>
-            <div fxLayout="row" fxLayoutAlign="space-evenly start">
-                <button
-                    mat-icon-button
-                    aria-label="Delete current run"
-                    matTooltip="Delete current run"
-                    color="warn"
-                    [disabled]="
-                        (isCurrentRunEmpty$ | async) &&
-                        (hasPreviousRun$ | async) === false &&
-                        (hasNextRun$ | async) === false
-                    "
-                    (click)="removeRun()"
-                >
-                    <mat-icon>delete_forever</mat-icon>
-                </button>
-                <button
-                    mat-icon-button
-                    aria-label="Add empty run"
-                    matTooltip="Add empty run"
-                    color="primary"
-                    [disabled]="isCurrentRunEmpty$ | async"
-                    (click)="addRun()"
-                >
-                    <mat-icon>add_circle</mat-icon>
-                </button>
-                <button
-                    mat-icon-button
-                    aria-label="Reset runs"
-                    matTooltip="Reset runs"
-                    color="warn"
-                    (click)="reset()"
-                >
-                    <mat-icon>restart_alt</mat-icon>
-                </button>
-            </div>
-            <button
-                *ngIf="runValidationStatus === 'warn'"
-                class="button_resolve"
-                color="accent"
-                matSuffix
-                mat-icon-button
-                aria-label="Resolve warnings"
-                matTooltip="Resolve warnings"
-                (click)="resolveWarnings()"
-            >
-                <mat-icon>auto_fix_high</mat-icon>
-            </button>
-        </mat-form-field>
+
+        <app-source-file-textarea></app-source-file-textarea>
+
         <app-template-button
             buttonText="Right button"
             buttonIcon="grade"
