--- a/src/app/components/template-button/template-button.component.html
+++ b/src/app/components/template-button/template-button.component.html
@@ -4,7 +4,7 @@
         class="interactive-square"
         fxLayout="row"
         fxLayoutAlign="center center"
-        (click)="processMouseClick($event)"
+        (click)="processMouseClick()"
         (mouseenter)="hoverStart($event)"
         (mouseleave)="hoverEnd($event)"
         (drop)="processDrop($event)"
