--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,14 @@
         <app-template-button
             buttonText="Right button"
             buttonIcon="grade"
+            buttonText="Download Current Run"
+            buttonIcon="download"
+            (buttonAction)="downloadCurrentRun()"
+        ></app-template-button>
+        <app-template-button
+            buttonText="Download All"
+            buttonIcon="download"
+            (buttonAction)="downloadRuns()"
         ></app-template-button>
     </div>
 
