enable to enter file name for download and switch between download current run and download all (css is still missing)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,16 +27,7 @@
 
         <app-source-file-textarea></app-source-file-textarea>
 
-        <app-template-button
-            buttonText="Download Current Run"
-            buttonIcon="download"
-            (buttonAction)="downloadCurrentRun()"
-        ></app-template-button>
-        <app-template-button
-            buttonText="Download All"
-            buttonIcon="download"
-            (buttonAction)="downloadRuns()"
-        ></app-template-button>
+        <app-download></app-download>
     </div>
 
     <app-footer></app-footer>
