--- a/src/app/components/download/download.component.html
+++ b/src/app/components/download/download.component.html
@@ -1,34 +1,41 @@
-<app-template-button
-    buttonText="Download"
-    buttonIcon="download"
-    (buttonAction)="changeHideDownload()"
-></app-template-button>
-<form [hidden]="_hideDownload">
-    <div>
-        <label>Name</label>
-        <input
-            type="text"
-            placeholder="Enter Name"
-            id="name"
-            value="{{ _name }}"
-            (input)="changeName($event)"
-        />
-    </div>
-    <div>
-        <mat-radio-group>
-            <mat-radio-button
+<div>
+    <app-template-button
+        buttonText="Download"
+        buttonIcon="download"
+        (buttonAction)="changeHideDownload()"
+    ></app-template-button>
+    <form [hidden]="_hideDownload" class="download-field">
+        <div class="input-field">
+            <span> Name:</span>
+            <input
+                type="text"
+                name="text"
+                id="text"
+                value="_downloadName"
+                placeholder="Enter Name"
+                [(ngModel)]="_downloadName"
+            />
+        </div>
+        <div class="radio-button">
+            <span> Download:</span>
+            <input
+                type="radio"
+                name="selection"
                 value="all"
-                (click)="changeCurrentDownloadSelection('all')"
-                checked="true"
-                >Save All</mat-radio-button
-            >
-            <mat-radio-button
+                [(ngModel)]="_currentDownloadSelection"
+            />
+            <span>All</span>
+            <input
+                type="radio"
+                name="selection"
                 value="current"
-                (click)="changeCurrentDownloadSelection('current')"
-                >Save Current Run</mat-radio-button
-            >
-        </mat-radio-group>
-    </div>
-    <button class="btn" (click)="changeHideDownload()">Cancel</button>
-    <button class="btn" (click)="download()">Save</button>
-</form>
+                [(ngModel)]="_currentDownloadSelection"
+            />
+            <span>Current Run</span>
+        </div>
+        <div class="buttons">
+            <button class="btn" (click)="changeHideDownload()">Cancel</button>
+            <button class="btn" (click)="download()">Save</button>
+        </div>
+    </form>
+</div>
