--- a/src/app/components/download/download.component.html
+++ b/src/app/components/download/download.component.html
@@ -1,4 +1,4 @@
-<div>
+<div fxLayout="column" fxLayoutAlign="start center">
     <app-template-button
         buttonText="Download"
         buttonIcon="download"
