PAR-38: scrollable canvas

--- a/src/app/components/display-merged-run/display-merged-run.component.scss
+++ b/src/app/components/display-merged-run/display-merged-run.component.scss
@@ -1,6 +1,11 @@
 :host {
     .canvas {
         width: 100%;
-        height: 400px;
+        min-height: 400px
+    }
+
+    .svg-scroller {
+        overflow: auto;
+        max-height: 404px;
     }
 }
