--- a/src/app/components/display-merged-run/display-merged-run.component.html
+++ b/src/app/components/display-merged-run/display-merged-run.component.html
@@ -1,16 +1,18 @@
-<svg #drawingArea class="canvas">
-    <defs>
-        <marker
-            id="arrowhead"
-            viewBox="0 0 10 10"
-            refX="13.5"
-            refY="4.5"
-            markerUnits="strokeWidth"
-            markerWidth="15"
-            markerHeight="9"
-            orient="auto"
-        >
-            <polygon points="0 0, 15 4.5, 0 9" fill="#000000" />
-        </marker>
-    </defs>
-</svg>
+<div class="svg-scroller">
+    <svg #drawingArea class="canvas">
+        <defs>
+            <marker
+                id="arrowhead"
+                viewBox="0 0 10 10"
+                refX="13.5"
+                refY="4.5"
+                markerUnits="strokeWidth"
+                markerWidth="15"
+                markerHeight="9"
+                orient="auto"
+            >
+                <polygon points="0 0, 15 4.5, 0 9" fill="#000000" />
+            </marker>
+        </defs>
+    </svg>
+</div>
