--- a/src/app/components/template-button/template-button.component.scss
+++ b/src/app/components/template-button/template-button.component.scss
@@ -1,32 +1,35 @@
-.interactive-square {
-    width: 100px;
-    height: 100px;
-    border-color: dimgrey;
-    border-width: 5px;
-    border-style: solid;
-    margin-top: 14px;
-}
+:host {
+    width: 350px;
 
-.interactive-square * {
-    pointer-events: none;
-}
+    .interactive-square {
+        width: 100px;
+        height: 100px;
+        border-color: dimgrey;
+        border-width: 5px;
+        border-style: solid;
+        margin-top: 14px;
+    }
 
-.mouse-hover:not(.drag-hover) {
-    border-color: black;
-}
+    .interactive-square * {
+        pointer-events: none;
+    }
 
-.drag-hover {
-    border-color: green;
-}
+    .mouse-hover:not(.drag-hover) {
+        border-color: black;
+    }
 
-.larger-icon {
-    font-size: 40px;
-    width: 40px;
-    height: 40px;
-    color: dimgrey;
-}
+    .drag-hover {
+        border-color: green;
+    }
 
-.mouse-hover .larger-icon, .drag-hover .larger-icon {
-    color: black;
-}
+    .larger-icon {
+        font-size: 40px;
+        width: 40px;
+        height: 40px;
+        color: dimgrey;
+    }
 
+    .mouse-hover .larger-icon, .drag-hover .larger-icon {
+        color: black;
+    }
+}
