--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,11 +34,11 @@ svg text{
 }
 
 .move-helper {
-    /*fill-opacity: 0;
+    fill-opacity: 0;
     position: relative;
     z-index: 10;
     &:hover {
         fill-opacity: 0.5;
         transition: fill-opacity .25s ease-out;
-    }*/
+    }
 }
