change css + remove console.log

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,4 +29,10 @@
     mat-tab-group {
         border: 2px dotted lightgrey;
     }
+
+    .reset-button{
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+    }
 }
