--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,9 @@
     <mat-tab-group>
         <mat-tab label="Separate Runs">
             <app-display class="padding full-size"></app-display>
-            <button (click)="emitEventToChild()">reset</button>
+            <button (click)="emitEventToChild()" class="reset-button">
+                Reset
+            </button>
         </mat-tab>
         <mat-tab label="Merged Runs">
             <app-display-merged-run
