--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -22,7 +22,7 @@
             markerHeight="9"
             orient="auto"
         >
-            <polygon points="0 0, 15 4.5, 0 9" fill="pink" />
+            <polygon points="0 0, 15 4.5, 0 9" [attr.fill]="highlightColor" />
         </marker>
     </defs>
 </svg>
