--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
             </button>
         </mat-tab>
         <mat-tab label="Merged Runs">
+            <app-color></app-color>
             <app-display-merged-run
                 class="padding full-size"
             ></app-display-merged-run>
