--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -4,7 +4,7 @@
         id="color"
         name="color"
         [(ngModel)]="highlightColor"
-        (blur)="changeColor()"
+        (input)="changeColor()"
     />
     <label for="color">Highlight Current Run</label>
     <input
