PAR-50: adds reset-button to merge-view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
             <app-display-merged-run
                 class="padding full-size"
             ></app-display-merged-run>
+            <button (click)="resetSvgPositioning()" class="reset-button">
+                Reset
+            </button>
         </mat-tab>
     </mat-tab-group>
 
