enable the download of run(s) compressed as a zip

--- a/src/app/components/download/download-popover/download-popover.component.html
+++ b/src/app/components/download/download-popover/download-popover.component.html
@@ -35,6 +35,21 @@
         <mat-radio-button value="pnml">PNML</mat-radio-button>
     </mat-radio-group>
 
+    <mat-label
+        *ngIf="currentDownloadSelection === 'all'"
+        id="format-radio-group-label"
+        >Compression</mat-label
+    >
+    <mat-radio-group
+        *ngIf="currentDownloadSelection === 'all'"
+        color="primary"
+        [(ngModel)]="compression"
+        aria-labelledby="format-radio-group-label"
+    >
+        <mat-radio-button value="no">No compression</mat-radio-button>
+        <mat-radio-button value="zip">Download as ZIP</mat-radio-button>
+    </mat-radio-group>
+
     <div class="buttons"></div>
 </div>
 
