--- a/src/app/components/download/download-popover/download-popover.component.scss
+++ b/src/app/components/download/download-popover/download-popover.component.scss
@@ -14,16 +14,26 @@
 
             mat-radio-button {
                 margin: var(--spaces) 0;
+                ::ng-deep .mat-radio-button-inner-container {
+                    width: 20px;
+                    height: 20px;
+                }
             }
         }
         mat-checkbox{
             padding: var(--spaces);
+            
+            ::ng-deep .mat-checkbox-inner-container {
+                width: 20px;
+                height: 20px;
+            }
+                  
 
         }
 
-        ::ng-deep mat-form-field .mat-form-field-wrapper {
+        ::ng-deep mat-form-field .mat-form-field-wrapper{
             width: 300px;
-            padding-bottom: var(---spaces);
+            padding-bottom: var(--spaces);
         }
     }
 
