--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
 
     <!--    Main content    -->
     <mat-tab-group (selectedIndexChange)="updateTabIndex($event)">
-        <mat-tab id="separate" label="Separate Runs">
+        <mat-tab id="separate" label="Current Run">
             <app-display class="padding full-size"></app-display>
             <button (click)="resetSvgPositioning()" class="reset-button">
                 Reset
             </button>
         </mat-tab>
-        <mat-tab id="merged" label="Merged Runs">
+        <mat-tab id="merged" label="Prime-Event-Structure">
             <app-color></app-color>
             <app-display-merged-run
                 class="padding full-size"
