--- a/src/app/components/download/download.component.html
+++ b/src/app/components/download/download.component.html
@@ -1,11 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="start center">
     <app-template-button
-        [buttonText]="
-            'Download ' +
-            (contentToDownload === 'separateRuns'
-                ? ' run(s)'
-                : ' merged run(s)')
-        "
+        buttonText="Download"
         buttonIcon="download"
         (buttonAction)="openDialog()"
     ></app-template-button>
