change reset all to delete all

--- a/src/app/components/source-file-textarea/source-file-textarea.component.html
+++ b/src/app/components/source-file-textarea/source-file-textarea.component.html
@@ -74,8 +74,8 @@
         </button>
         <button
             mat-icon-button
-            aria-label="Reset runs"
-            matTooltip="Reset runs"
+            aria-label="Delete all runs"
+            matTooltip="Delete all runs"
             color="warn"
             (click)="reset()"
         >
