Change of Footer and Header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <a href="https://www.fernuni-hagen.de/ilovepetrinets/"
         ><h1>I <span class="red">❤</span> Petri Nets</h1></a
     >
-    <h2>Partial language</h2>
+    <h2>
+        <span class="red">❤</span> ...and Partial Languages
+        <span class="red">❤</span>
+    </h2>
 
     <!--    Main content    -->
     <mat-tab-group (selectedIndexChange)="updateTabIndex($event)">
