--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,11 +4,10 @@
     ...and I know you do too!
     <br />
     <br />
-    <a
-        href="https://www.fernuni-hagen.de/mi/fakultaet/lehrende/bergenthum/index.shtml"
-        >Robin Bergenthum</a
-    >
-    and <a href="">Jakub Kovář</a>
+    <a>Nico Lüg</a>, <a>Marcel Sanders</a>,
+    <a>Alexander Kürzl</a>
+    and <a>Elisabeth Brandl</a>
+    <br />
     <br />
     Fakultät für Mathematik und Informatik
     <br />
