fixed my name 🙂

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     ...and I know you do too!
     <br />
     <br />
-    <a>Nico Lüg</a>, <a>Marcel Sanders</a>,
+    <a>Nico Lueg</a>, <a>Marcel Sanders</a>,
     <a>Alexander Kürzl</a>
     and <a>Elisabeth Brandl</a>
     <br />
