--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,18 +8,20 @@ body {
     font-family: "Courier New", sans-serif;
 }
 
-svg text {
+svg foreignObject {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    text-anchor: middle;
+    font-size: 0.8em;
+    text-align: center;
+    word-break: break-word;
 }
 
-svg text{
-    text-anchor: middle;
-}
+
 
 :root {
     --success-color: #4CAF50;
