--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,9 +16,17 @@ svg foreignObject {
     -ms-user-select: none;
     user-select: none;
     text-anchor: middle;
-    font-size: 0.8em;
+    font-size: 0.75em;
     text-align: center;
     word-break: break-word;
+}
+
+svg foreignObject span {
+    display: -webkit-box;
+    max-width: 100px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 
