--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -1,4 +1,7 @@
-<app-canvas
-    *ngIf="svgElements$ | async as svgElements"
-    [svgElements]="svgElements"
-></app-canvas>
+<div #svg_wrapper>
+    <app-canvas
+        #canvas
+        *ngIf="svgElements$ | async as svgElements"
+        [svgElements]="svgElements"
+    ></app-canvas>
+</div>
