Fixes contributor's name

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     <br />
     <br />
     <a>Nico Lueg</a>, <a>Marcel Sanders</a>,
-    <a>Alexander Kürzl</a>
+    <a>Alexander Künzl</a>
     and <a>Elisabeth Brandl</a>
     <br />
     <br />
