add text shadow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@ svg foreignObject span {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-shadow: 1px 1px #ffffff, 2px 2px #ffffff, -1px -1px #ffffff, -2px -2px #ffffff, -3px -3px #ffffff, 3px 3px #ffffff;
 }
 
 
