--- a/src/app/components/display-merged-run/display-merged-run.component.html
+++ b/src/app/components/display-merged-run/display-merged-run.component.html
@@ -2,8 +2,6 @@
     <app-canvas
         #canvas
         *ngIf="svgElements$ | async as svgElements"
-        [svgElements]="svgElements.list"
-        [canvasHeight]="svgElements.height"
-        [persistCoordinates]="false"
+        [svgElements]="svgElements"
     ></app-canvas>
 </div>
