--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,25 +8,16 @@ body {
     font-family: "Courier New", sans-serif;
 }
 
-svg foreignObject {
+svg text {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    text-anchor: middle;
-    font-size: 0.75em;
+    font-size: 0.8em;
     text-align: center;
     word-break: break-word;
-}
-
-svg foreignObject span {
-    display: -webkit-box;
-    max-width: 100px;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
 }
 
 
