--- a/src/app/components/display-merged-run/display-merged-run.component.html
+++ b/src/app/components/display-merged-run/display-merged-run.component.html
@@ -3,5 +3,6 @@
         #canvas
         *ngIf="svgElements$ | async as svgElements"
         [svgElements]="svgElements"
+        [updateOffsetInRun]="false"
     ></app-canvas>
 </div>
