--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
     font-family: "Courier New", sans-serif;
 }
 
-svg text {
+svg foreignObject {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -18,8 +18,15 @@ svg text {
     font-size: 0.8em;
     text-align: center;
     word-break: break-word;
-}
 
+    span {
+        display: -webkit-box;
+        max-width: 100px;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+}
 
 
 :root {
