PAR-84: update text for prime-event-structure

--- a/src/app/components/display-merged-run/display-merged-run.component.html
+++ b/src/app/components/display-merged-run/display-merged-run.component.html
@@ -3,6 +3,7 @@
         #canvas
         *ngIf="svgElements$ | async as svgElements"
         [svgElements]="svgElements"
-        [updateOffsetInRun]="false"
+        [persistUiChangesForRunInTextarea]="false"
+        (coordinateChanged)="updateTextInMergedRun($event)"
     ></app-canvas>
 </div>
