--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,8 +27,21 @@ svg foreignObject span {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    text-shadow: 1px 1px 3px #ffffff, 2px 2px 3px #ffffff, -1px -1px 3px #ffffff, -2px -2px 3px #ffffff, -3px -3px 3px #ffffff, 3px 3px 3px #ffffff;
+
+    /* dünnerer shadow*/
+    text-shadow: -1px 1px#ffffff, -1px 0px #ffffff, -1px -1px #ffffff, 
+    0px 1px #ffffff, 0px -1px #ffffff, 
+    1px  1px #ffffff, 1px 0px #ffffff, 1px -1px #ffffff;
+
+    // /* dickerer shadow*/
+    // text-shadow: -2px 2px#ffffff, -2px 1px#ffffff, -2px 0px#ffffff, -2px -1px#ffffff,-2px -2px#ffffff,
+    // -1px 2px#ffffff, -1px 1px#ffffff, -1px 0px#ffffff, -1px -1px#ffffff,-1px -2px#ffffff,
+    // 0px 2px#ffffff, 0px 1px#ffffff, 0px 0px#ffffff, 0px -1px#ffffff,0px -2px#ffffff,
+    // 1px 2px#ffffff, 1px 1px#ffffff, 1px 0px#ffffff, 1px -1px#ffffff,1px -2px#ffffff,
+    // 2px 2px#ffffff, 2px 1px#ffffff, 2px 0px#ffffff, 2px -1px#ffffff,2px -2px#ffffff,
 }
+
+
 
 :root {
     --success-color: #4CAF50;
