--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ svg foreignObject {
     font-size: 0.8em;
     text-align: center;
     word-break: break-word;
+    pointer-events: none;
 
     span {
         display: -webkit-box;
